Using fixed position and overflow scroll to adjust the angle so the text scrolls within the frame.

--- a/styles/theforce.css
+++ b/styles/theforce.css
@@ -27,19 +27,21 @@ body:after {
     display: block;
     top: 0;
     width: 100%;
-    height: 350px;
-    background: -webkit-linear-gradient(top, rgba(0,0,0,0.90) 0%,rgba(0,0,0,0) 100%);
+    height: 300px;
+    background: -webkit-linear-gradient(top, rgba(0,0,0,1) 0%,rgba(0,0,0,0) 100%);
     color: transparent;
 }
 
 header {
-    width: 80%;
-    padding: 0 10%;
+    position: fixed;
+    top: -50px;
+    width: 70%;
+    padding: 0 15%;
     max-width: 960px;
     margin: 0 auto;
     -webkit-perspective: 700;
     -webkit-perspective-origin-x: 50%;
-    -webkit-perspective-origin-y: 5%;
+    -webkit-perspective-origin-y: 15%;
 }
 
 @-webkit-keyframes scale {
@@ -52,7 +54,7 @@ header {
 }
 
 h1 {
-    margin: 100px 0 500px;
+    display: none;
     font: 700;
     font-size: 10em;
     color: black;
@@ -62,8 +64,10 @@ h1 {
 }
 
 nav {
-    -webkit-transform: rotateX(45deg);
-    margin: 0 0 500px 0;
+    -webkit-transform: rotateX(45deg);    
+    max-height: 700px;    
+    border: solid 1px blue;
+    overflow: scroll;
 }
 
 nav ul {
@@ -93,10 +97,6 @@ nav a:last-child:after {
     content: ' |';
 }
 
-article header:before {
-    display: none;
-}
-
 article {
     width: 80%;
     padding: 0 10%;
@@ -121,6 +121,7 @@ h2 {
 }
 
 footer {
+    display: none;
     width: 80%;
     padding: 0 10%;
     max-width: 960px;
